--- a/build
+++ b/build
@@ -1,3 +1,6 @@
 #!/usr/bin/env bash
 set -Eeuo pipefail
 docker build . --ulimit "nofile=1024:10240" -t xenorepo
+if [ -x local-build ]; then
+    ./local-build
+fi
